--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "req-code-generator",
-  "version": "1.0.1",
-  "description": "req-code-generator",
+  "version": "1.0.2",
+  "description": "根据参数生成request的ts代码",
   "main": "./dist/index.js",
   "typings": "./dist/index.d.ts",
   "files": [
@@ -20,6 +20,10 @@
     "generator",
     "generate"
   ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/z-juln/req-code-generator.git"
+  },
   "author": {
     "name": "juln",
     "email": "1850021148@qq.com",
